tests/negative/call_less_args.fc
// test: call-with-less-number-of-arguments-test
// compile-fail: true
// exit-code: 1

int write(int _);
void exit(int _);

int foo(int a, int b){
    return a * b;
}

void main(){
    int res = foo(10);
    write(res);
    exit(0);
}